# xlpd

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
src/: blur.cu  check.cu  cli.py  color_to_grayscale.cu  main.cu  vector_add.cu  xlpd.cu  xlpd.h
src/xlpd/: __init__.py  __init__.pyi  add.py  cli.py  greet.py
xlpd/: cli.py
